<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorTransAccent"
    tools:context="eu.jrie.lets_chess.PromotionFragment">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/ingame_fragment_background">

        <TextView
            android:id="@+id/game_result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            tools:text="@string/draw"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryGold"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <Button
                android:id="@+id/end_game_main_menu_button"
                style="@style/gameMenuButtonStyle"

                android:text="@string/end_game_menu_button"/>
            <Button
                android:id="@+id/end_game_again_button"
                style="@style/gameMenuButtonStyle"

                android:text="@string/end_game_play_again_button"/>
            <Button
                android:id="@+id/end_game_show_board_button"
                style="@style/gameMenuButtonStyle"

                android:text="@string/end_ame_show_board_button"/>
            <Button
                android:id="@+id/end_game_share_button"
                style="@style/gameMenuButtonStyle"

                android:text="@string/end_game_share_board_button"/>
        </GridLayout>



    </LinearLayout>

</LinearLayout>
