<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/promotion_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorTransAccent"
    tools:context="com.jr.chess.PromotionFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/promotion_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/leave_game_header" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                style="@style/leaveGameButtonStyle"
                android:id="@+id/leave_game_confirm_button"
                android:text="@string/leave_game_confirm" />

            <Button
                style="@style/leaveGameButtonStyle"
                android:id="@+id/leave_game_decline_button"
                android:text="@string/leave_game_decline" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
